# ReoLinkAPI

./: .gitattributes  .gitignore  pyproject.toml  requirements.txt  setup.py
reolink/: camera_api.py  models.py  settings.py  utils.py
reolink/cli/: __init__.py
reolink/interval/: __init__.py  interval.py
reolink/runners/: detect.py  fetch.py  login.py
src/reolink/: camera_api.py  models.py  settings.py  utils.py
src/reolink/cli/: __init__.py
src/reolink/interval/: __init__.py  c_interval.c  c_interval.pyx
src/reolink/runners/: detect.py  fetch.py  login.py
tests/: test_fetch.py
